# kbc-poc-app

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
src/: component.py  my_component.py
src/component/: extractor_azure_blob.py
src/plugin/writer/sftp/: main.py  schema.json  sftp_writer.py
src/plugin/writer/sftp/lib/: Constants.py
