[tool.poetry]
name = "px360-keboola-app"
version = "0.1.0"
description = ""
authors = ["Roman Novosad <roman.novosad@datasentics.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kbc = {url = "https://bitbucket.org/kds_consulting_team/keboola-python-util-lib/get/0.5.2.zip#egg=kbc"}
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
