[tool.poetry]
name = "px360-keboola-app"
version = "0.1.0"
description = ""
authors = ["Roman Novosad <roman.novosad@datasentics.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "^2.7.2"
"keboola.component" = "^1.0.3"

[tool.poetry.dev-dependencies]
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
